--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
-    "next": "14.2.16",
+    "next": "^15.1.2",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.5",
