--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^15.1.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-type-animation": "^3.2.0",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
